--- a/index.html
+++ b/index.html
@@ -5,29 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Почему ChatGPT — отличный интеллект</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <style>
         .hero-bg {
             background-image: url('https://source.unsplash.com/1920x1080/?technology,ai');
             background-size: cover;
             background-position: center;
         }
+        .fade-in {
+            opacity: 0;
+        }
+        .hover-effect:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        .transition-all {
+            transition: all 0.3s ease-in-out;
+        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
-    <header class="hero-bg text-white py-20">
+    <header class="hero-bg text-white py-20 fade-in">
         <div class="container mx-auto text-center">
             <h1 class="text-5xl font-bold drop-shadow-lg">ChatGPT — ваш умный помощник</h1>
             <p class="text-xl mt-4 drop-shadow-md">Откройте мир возможностей с искусственным интеллектом</p>
-            <a href="#features" class="mt-8 inline-block bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg shadow-md transition">Узнать больше</a>
+            <a href="#features" class="mt-8 inline-block bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg shadow-md transition-all">Узнать больше</a>
         </div>
     </header>
 
-    <main class="container mx-auto py-16 px-4">
+    <main class="container mx-auto py-16 px-4 fade-in">
         <section id="features" class="text-center mb-16">
             <h2 class="text-4xl font-semibold mb-8">Почему выбирают ChatGPT?</h2>
             <p class="text-lg text-gray-600 mb-12">ChatGPT помогает решать задачи, учиться, создавать контент и просто развлекаться. Это инструмент, который меняет подход к взаимодействию с технологиями.</p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
-                <div class="bg-white shadow-lg rounded-lg p-8">
+                <div class="bg-white shadow-lg rounded-lg p-8 hover-effect transition-all">
                     <div class="text-blue-600 mb-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m-1-4h3l2 6h-2l-1-3h-1v3h2l1 3h-4" />
@@ -36,7 +47,7 @@
                     <h3 class="text-2xl font-bold mb-2">Умный и обучаемый</h3>
                     <p class="text-gray-700">ChatGPT способен адаптироваться к вашим запросам, помогая найти оптимальные решения.</p>
                 </div>
-                <div class="bg-white shadow-lg rounded-lg p-8">
+                <div class="bg-white shadow-lg rounded-lg p-8 hover-effect transition-all">
                     <div class="text-blue-600 mb-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
@@ -45,7 +56,7 @@
                     <h3 class="text-2xl font-bold mb-2">Многозадачность</h3>
                     <p class="text-gray-700">Он помогает писать коды, решать математические задачи, переводить тексты и многое другое.</p>
                 </div>
-                <div class="bg-white shadow-lg rounded-lg p-8">
+                <div class="bg-white shadow-lg rounded-lg p-8 hover-effect transition-all">
                     <div class="text-blue-600 mb-4">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a4 4 0 10-8 0v2m2 12h4m4-10H5m16 0a2 2 0 01-2 2H5a2 2 0 01-2-2m16 0V7a6 6 0 00-12 0v2m12 0H5" />
@@ -57,14 +68,14 @@
             </div>
         </section>
 
-        <section class="text-center">
+        <section class="text-center fade-in">
             <h2 class="text-4xl font-semibold mb-6">Как использовать ChatGPT?</h2>
             <p class="text-lg text-gray-600 mb-8">Это просто! Задайте свой вопрос или опишите проблему, и ChatGPT предоставит ответ в считанные секунды.</p>
-            <a href="https://chat.openai.com" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg shadow-md hover:bg-blue-700 transition">Попробовать ChatGPT</a>
+            <a href="https://chat.openai.com" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg shadow-md hover:bg-blue-700 transition-all">Попробовать ChatGPT</a>
         </section>
     </main>
 
-    <footer class="bg-gray-800 text-white py-8">
+    <footer class="bg-gray-800 text-white py-8 fade-in">
         <div class="container mx-auto text-center">
             <p class="text-sm">&copy; 2025 ChatGPT. Все права защищены.</p>
             <p class="text-sm mt-2">Следите за нами в соцсетях:</p>
@@ -74,5 +85,10 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        // GSAP animations
+        gsap.from(".fade-in", { duration: 1, opacity: 0, y: 50, stagger: 0.3 });
+    </script>
 </body>
 </html>
