--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
             <a href="https://chat.openai.com" target="_blank" class="mt-4 inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg shadow transition-all">Попробовать</a>
         </section>
 
+        <section id="calculator" class="text-center mb-16 fade-in">
+            <h2 class="text-4xl font-semibold mb-6">Калькулятор</h2>
+            <div class="bg-gray-100 p-6 rounded-lg shadow-lg inline-block">
+                <input type="number" id="num1" placeholder="Число 1" class="border p-2 rounded mr-2">
+                <input type="number" id="num2" placeholder="Число 2" class="border p-2 rounded mr-2">
+                <select id="operation" class="border p-2 rounded mr-2">
+                    <option value="+">+</option>
+                    <option value="-">-</option>
+                    <option value="*">*</option>
+                    <option value="/">/</option>
+                </select>
+                <button onclick="calculate()" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Рассчитать</button>
+                <p id="result" class="mt-4 text-xl font-bold"></p>
+            </div>
+        </section>
+
         <section id="testimonials" class="text-center fade-in">
             <h2 class="text-4xl font-semibold mb-6">Отзывы пользователей</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -91,6 +107,35 @@
                 el.addEventListener("mouseout", () => el.classList.remove("shadow-2xl"));
             });
         });
+
+        function calculate() {
+            const num1 = parseFloat(document.getElementById('num1').value);
+            const num2 = parseFloat(document.getElementById('num2').value);
+            const operation = document.getElementById('operation').value;
+            let result;
+
+            if (isNaN(num1) || isNaN(num2)) {
+                result = "Введите оба числа!";
+            } else {
+                switch (operation) {
+                    case '+':
+                        result = num1 + num2;
+                        break;
+                    case '-':
+                        result = num1 - num2;
+                        break;
+                    case '*':
+                        result = num1 * num2;
+                        break;
+                    case '/':
+                        result = num2 !== 0 ? num1 / num2 : "Деление на ноль!";
+                        break;
+                    default:
+                        result = "Неизвестная операция";
+                }
+            }
+            document.getElementById('result').textContent = `Результат: ${result}`;
+        }
     </script>
 </body>
 </html>
