--- a/index.html
+++ b/index.html
@@ -12,16 +12,6 @@
             background-size: cover;
             background-position: center;
         }
-        .fade-in {
-            opacity: 0;
-        }
-        .hover-effect:hover {
-            transform: scale(1.05);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        }
-        .transition-all {
-            transition: all 0.3s ease-in-out;
-        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -29,113 +19,83 @@
         <div class="container mx-auto text-center">
             <h1 class="text-5xl font-bold drop-shadow-lg">ChatGPT — ваш умный помощник</h1>
             <p class="text-xl mt-4 drop-shadow-md">Откройте мир возможностей с искусственным интеллектом</p>
-            <a href="#features" class="mt-8 inline-block bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg shadow-md transition-all">Узнать больше</a>
+            <a href="#features" class="mt-8 inline-block bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg shadow-md transition">Узнать больше</a>
         </div>
     </header>
 
     <main class="container mx-auto py-16 px-4">
         <section id="features" class="text-center mb-16">
-            <h2 class="text-4xl font-semibold mb-8 fade-in">Почему выбирают ChatGPT?</h2>
+            <h2 class="text-4xl font-semibold mb-8">Почему выбирают ChatGPT?</h2>
+            <p class="text-lg text-gray-600 mb-12">ChatGPT помогает решать задачи, учиться, создавать контент и просто развлекаться. Это инструмент, который меняет подход к взаимодействию с технологиями.</p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
-                <div class="bg-white shadow-lg rounded-lg p-8 hover-effect transition-all fade-in">
-                    <h3 class="text-2xl font-bold mb-4">Умный и обучаемый</h3>
-                    <p>ChatGPT адаптируется к вашим запросам, помогая находить решения для множества задач.</p>
+                <div class="bg-white shadow-lg rounded-lg p-8 feature-card">
+                    <div class="text-blue-600 mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m-1-4h3l2 6h-2l-1-3h-1v3h2l1 3h-4" />
+                        </svg>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-2">Умный и обучаемый</h3>
+                    <p class="text-gray-700">ChatGPT способен адаптироваться к вашим запросам, помогая найти оптимальные решения.</p>
                 </div>
-                <div class="bg-white shadow-lg rounded-lg p-8 hover-effect transition-all fade-in">
-                    <h3 class="text-2xl font-bold mb-4">Многозадачность</h3>
-                    <p>От написания кода до перевода текстов, ChatGPT делает всё быстро и качественно.</p>
+                <div class="bg-white shadow-lg rounded-lg p-8 feature-card">
+                    <div class="text-blue-600 mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+                        </svg>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-2">Многозадачность</h3>
+                    <p class="text-gray-700">Он помогает писать коды, решать математические задачи, переводить тексты и многое другое.</p>
                 </div>
-                <div class="bg-white shadow-lg rounded-lg p-8 hover-effect transition-all fade-in">
-                    <h3 class="text-2xl font-bold mb-4">Доступен всегда</h3>
-                    <p>ChatGPT работает 24/7, без выходных, всегда готов помочь.</p>
+                <div class="bg-white shadow-lg rounded-lg p-8 feature-card">
+                    <div class="text-blue-600 mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a4 4 0 10-8 0v2m2 12h4m4-10H5m16 0a2 2 0 01-2 2H5a2 2 0 01-2-2m16 0V7a6 6 0 00-12 0v2m12 0H5" />
+                        </svg>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-2">Доступен всегда</h3>
+                    <p class="text-gray-700">ChatGPT всегда готов помочь — 24/7, без выходных и перерывов.</p>
                 </div>
             </div>
         </section>
 
-        <section id="usage" class="text-center mb-16 fade-in">
+        <section class="text-center">
             <h2 class="text-4xl font-semibold mb-6">Как использовать ChatGPT?</h2>
-            <p>Введите вопрос или задачу, и ChatGPT мгновенно выдаст полезный ответ.</p>
-            <a href="https://chat.openai.com" target="_blank" class="mt-4 inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg shadow transition-all">Попробовать</a>
-        </section>
-
-        <section id="calculator" class="text-center mb-16 fade-in">
-            <h2 class="text-4xl font-semibold mb-6">Калькулятор</h2>
-            <div class="bg-gray-100 p-6 rounded-lg shadow-lg inline-block">
-                <input type="number" id="num1" placeholder="Число 1" class="border p-2 rounded mr-2">
-                <input type="number" id="num2" placeholder="Число 2" class="border p-2 rounded mr-2">
-                <select id="operation" class="border p-2 rounded mr-2">
-                    <option value="+">+</option>
-                    <option value="-">-</option>
-                    <option value="*">*</option>
-                    <option value="/">/</option>
-                </select>
-                <button onclick="calculate()" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Рассчитать</button>
-                <p id="result" class="mt-4 text-xl font-bold"></p>
-            </div>
-        </section>
-
-        <section id="testimonials" class="text-center fade-in">
-            <h2 class="text-4xl font-semibold mb-6">Отзывы пользователей</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <div class="bg-gray-100 p-6 rounded-lg shadow">
-                    <p class="italic">"ChatGPT помог мне написать сложный код всего за пару минут!"</p>
-                    <p class="mt-4 text-sm font-semibold">— Алексей</p>
-                </div>
-                <div class="bg-gray-100 p-6 rounded-lg shadow">
-                    <p class="italic">"Невероятно! Этот ИИ отвечает на вопросы точнее, чем мои учителя."</p>
-                    <p class="mt-4 text-sm font-semibold">— Екатерина</p>
-                </div>
-            </div>
+            <p class="text-lg text-gray-600 mb-8">Это просто! Задайте свой вопрос или опишите проблему, и ChatGPT предоставит ответ в считанные секунды.</p>
+            <a href="https://chat.openai.com" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg shadow-md hover:bg-blue-700 transition">Попробовать ChatGPT</a>
         </section>
     </main>
 
-    <footer class="bg-gray-800 text-white py-6">
+    <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto text-center">
-            <p>&copy; 2025 ChatGPT. Все права защищены.</p>
-            <div class="mt-4 flex justify-center space-x-4">
-                <a href="#" class="hover:text-blue-400 transition"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636a9 9 0 11-12.728 0M12 12v.01" /></svg></a>
-                <a href="#" class="hover:text-blue-400 transition"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 20l9-5-9-5-9 5 9 5zm0-10l9-5-9-5-9 5 9 5z" /></svg></a>
+            <p class="text-sm">&copy; 2025 ChatGPT. Все права защищены.</p>
+            <p class="text-sm mt-2">Следите за нами в соцсетях:</p>
+            <div class="flex justify-center space-x-4 mt-4">
+                <a href="#" class="hover:text-blue-400 transition"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636a9 9 0 11-12.728 0M12 12v.01" /></svg></a>
+                <a href="#" class="hover:text-blue-400 transition"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 20l9-5-9-5-9 5 9 5zm0-10l9-5-9-5-9 5 9 5z" /></svg></a>
             </div>
         </div>
     </footer>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            gsap.from(".fade-in", { duration: 1, opacity: 0, y: 20, stagger: 0.2 });
-            document.querySelectorAll(".hover-effect").forEach(el => {
-                el.addEventListener("mouseover", () => el.classList.add("shadow-2xl"));
-                el.addEventListener("mouseout", () => el.classList.remove("shadow-2xl"));
+            gsap.from("header h1", { duration: 1, opacity: 0, y: -50 });
+            gsap.from("header p", { duration: 1, opacity: 0, y: -30, delay: 0.3 });
+            gsap.from("header a", { duration: 1, opacity: 0, y: 20, delay: 0.6 });
+
+            gsap.from(".feature-card", {
+                duration: 1,
+                opacity: 0,
+                y: 50,
+                stagger: 0.2
+            });
+
+            gsap.from("footer", {
+                duration: 1,
+                opacity: 0,
+                y: 50,
+                delay: 1.2
             });
         });
-
-        function calculate() {
-            const num1 = parseFloat(document.getElementById('num1').value);
-            const num2 = parseFloat(document.getElementById('num2').value);
-            const operation = document.getElementById('operation').value;
-            let result;
-
-            if (isNaN(num1) || isNaN(num2)) {
-                result = "Введите оба числа!";
-            } else {
-                switch (operation) {
-                    case '+':
-                        result = num1 + num2;
-                        break;
-                    case '-':
-                        result = num1 - num2;
-                        break;
-                    case '*':
-                        result = num1 * num2;
-                        break;
-                    case '/':
-                        result = num2 !== 0 ? num1 / num2 : "Деление на ноль!";
-                        break;
-                    default:
-                        result = "Неизвестная операция";
-                }
-            }
-            document.getElementById('result').textContent = `Результат: ${result}`;
-        }
     </script>
 </body>
 </html>
