--- a/index.html
+++ b/index.html
@@ -1,101 +1,68 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Почему ChatGPT — отличный интеллект</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <title>Nursultan.tech Production - Best Mod for Block Blast!</title>
     <style>
-        .hero-bg {
-            background-image: url('https://source.unsplash.com/1920x1080/?technology,ai');
-            background-size: cover;
-            background-position: center;
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            flex-direction: column;
+        }
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            animation: fadeIn 2s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        h1 {
+            font-size: 2.5em;
+            margin: 0;
+        }
+        p {
+            font-size: 1.2em;
+            margin-top: 10px;
+        }
+        .download-links a {
+            display: inline-block;
+            background: #ff9800;
+            color: white;
+            padding: 10px 20px;
+            margin: 10px;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+        .download-links a:hover {
+            background: #e68900;
         }
     </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
-    <header class="hero-bg text-white py-20">
-        <div class="container mx-auto text-center">
-            <h1 class="text-5xl font-bold drop-shadow-lg">ChatGPT — ваш умный помощник</h1>
-            <p class="text-xl mt-4 drop-shadow-md">Откройте мир возможностей с искусственным интеллектом</p>
-            <a href="#features" class="mt-8 inline-block bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg shadow-md transition">Узнать больше</a>
+<body>
+    <div class="container">
+        <h1>Nursultan.tech Production</h1>
+        <p>Is Best Modification For Block Blast!</p>
+        <div class="download-links">
+            <a href="https://drive.google.com/file/d/10AuMvhc15FlldVNhSXBivldf7Fcw52h4/view?usp=drive_link" target="_blank">Download Block Blast Mod</a>
+            <a href="https://chelpus.com/download/LuckyPatchers.com_Official_Installer_11.6.7.apk" target="_blank">Download Lucky Patcher</a>
         </div>
-    </header>
-
-    <main class="container mx-auto py-16 px-4">
-        <section id="features" class="text-center mb-16">
-            <h2 class="text-4xl font-semibold mb-8">Почему выбирают ChatGPT?</h2>
-            <p class="text-lg text-gray-600 mb-12">ChatGPT помогает решать задачи, учиться, создавать контент и просто развлекаться. Это инструмент, который меняет подход к взаимодействию с технологиями.</p>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
-                <div class="bg-white shadow-lg rounded-lg p-8 feature-card">
-                    <div class="text-blue-600 mb-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m-1-4h3l2 6h-2l-1-3h-1v3h2l1 3h-4" />
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-bold mb-2">Умный и обучаемый</h3>
-                    <p class="text-gray-700">ChatGPT способен адаптироваться к вашим запросам, помогая найти оптимальные решения.</p>
-                </div>
-                <div class="bg-white shadow-lg rounded-lg p-8 feature-card">
-                    <div class="text-blue-600 mb-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-bold mb-2">Многозадачность</h3>
-                    <p class="text-gray-700">Он помогает писать коды, решать математические задачи, переводить тексты и многое другое.</p>
-                </div>
-                <div class="bg-white shadow-lg rounded-lg p-8 feature-card">
-                    <div class="text-blue-600 mb-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-12 h-12 mx-auto">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a4 4 0 10-8 0v2m2 12h4m4-10H5m16 0a2 2 0 01-2 2H5a2 2 0 01-2-2m16 0V7a6 6 0 00-12 0v2m12 0H5" />
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-bold mb-2">Доступен всегда</h3>
-                    <p class="text-gray-700">ChatGPT всегда готов помочь — 24/7, без выходных и перерывов.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="text-center">
-            <h2 class="text-4xl font-semibold mb-6">Как использовать ChatGPT?</h2>
-            <p class="text-lg text-gray-600 mb-8">Это просто! Задайте свой вопрос или опишите проблему, и ChatGPT предоставит ответ в считанные секунды.</p>
-            <a href="https://chat.openai.com" target="_blank" class="bg-blue-600 text-white px-8 py-4 rounded-lg shadow-md hover:bg-blue-700 transition">Попробовать ChatGPT</a>
-        </section>
-    </main>
-
-    <footer class="bg-gray-800 text-white py-8">
-        <div class="container mx-auto text-center">
-            <p class="text-sm">&copy; 2025 ChatGPT. Все права защищены.</p>
-            <p class="text-sm mt-2">Следите за нами в соцсетях:</p>
-            <div class="flex justify-center space-x-4 mt-4">
-                <a href="#" class="hover:text-blue-400 transition"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636a9 9 0 11-12.728 0M12 12v.01" /></svg></a>
-                <a href="#" class="hover:text-blue-400 transition"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 20l9-5-9-5-9 5 9 5zm0-10l9-5-9-5-9 5 9 5z" /></svg></a>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            gsap.from("header h1", { duration: 1, opacity: 0, y: -50 });
-            gsap.from("header p", { duration: 1, opacity: 0, y: -30, delay: 0.3 });
-            gsap.from("header a", { duration: 1, opacity: 0, y: 20, delay: 0.6 });
-
-            gsap.from(".feature-card", {
-                duration: 1,
-                opacity: 0,
-                y: 50,
-                stagger: 0.2
-            });
-
-            gsap.from("footer", {
-                duration: 1,
-                opacity: 0,
-                y: 50,
-                delay: 1.2
-            });
-        });
-    </script>
+        <p>Ниже Скачиваем Блок бласт и пытаемся установить. Не получается - скачиваем Лаки Патчер по ссылке выше.</p>
+        <p>Заходим в Google Play и скачиваем СХ Проводник. Заходим, выдаем доступ ко всему и заходим в папку "Скачанное" или "Загрузки" (она на главной странице экрана).</p>
+        <p>Ищем .apks файл (наш мод). Нашли - зажимаем и нажимаем "Поделиться". Выбираем поделиться с Lucky Patcher.</p>
+        <p>После этого, как только вы зашли в Лаки Патчер, тыкаем 1 - сразу установить без каких-либо патчей.</p>
+        <p><strong>ВНИМАНИЕ: СКАЧАЙТЕ ЛАКИ ПАТЧЕР, ЗАЙДИТЕ И ВЫДАЙТЕ ВСЕМУ ДОСТУП!!! ПОТОМ ВЫПОЛНЯЕМ МАХИНАЦИИ С АПК.</strong></p>
+    </div>
 </body>
 </html>
