--- a/index3.html
+++ b/index3.html
@@ -14,14 +14,38 @@
       height: 100vh;
       font-family: sans-serif;
     }
+    #ui {
+      margin-right: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    button {
+      padding: 10px;
+      font-size: 16px;
+      background: #1f1f1f;
+      color: white;
+      border: 1px solid #0f0;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+    button:hover {
+      background: #2f2f2f;
+    }
     canvas {
       background: #111;
       box-shadow: 0 0 20px #0f0;
       image-rendering: pixelated;
+      transition: transform 0.1s;
     }
   </style>
 </head>
 <body>
+  <div id="ui">
+    <button onclick="startGame()">Начать игру</button>
+    <button onclick="pauseGame()">Пауза</button>
+    <button onclick="endGame()">Закончить</button>
+  </div>
   <canvas id="game" width="400" height="400"></canvas>
   <script>
     const canvas = document.getElementById("game");
@@ -30,13 +54,40 @@
     const gridSize = 20;
     const tileCount = canvas.width / gridSize;
 
-    let snake = [{ x: 10, y: 10 }];
+    let snake = [];
     let velocity = { x: 0, y: 0 };
     let food = { x: 5, y: 5 };
     let score = 0;
+    let frame = 0;
+    let running = false;
+    let paused = false;
+
+    function startGame() {
+      snake = [{ x: 10, y: 10 }];
+      velocity = { x: 0, y: 0 };
+      food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
+      score = 0;
+      frame = 0;
+      running = true;
+      paused = false;
+    }
+
+    function pauseGame() {
+      paused = !paused;
+    }
+
+    function endGame() {
+      running = false;
+      ctx.fillStyle = "#111";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "white";
+      ctx.font = "20px sans-serif";
+      ctx.fillText("Игра завершена", 120, 200);
+    }
 
     function gameLoop() {
       requestAnimationFrame(gameLoop);
+      if (!running || paused) return;
       if (++frame % 5 !== 0) return;
 
       update();
@@ -45,13 +96,12 @@
 
     function update() {
       const head = { x: snake[0].x + velocity.x, y: snake[0].y + velocity.y };
-      
+
+      if (velocity.x === 0 && velocity.y === 0) return;
+
       if (head.x < 0 || head.y < 0 || head.x >= tileCount || head.y >= tileCount || snake.some(s => s.x === head.x && s.y === head.y)) {
         alert("Game Over! Score: " + score);
-        snake = [{ x: 10, y: 10 }];
-        velocity = { x: 0, y: 0 };
-        food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
-        score = 0;
+        running = false;
         return;
       }
 
@@ -59,6 +109,8 @@
 
       if (head.x === food.x && head.y === food.y) {
         score++;
+        canvas.style.transform = "scale(1.05)";
+        setTimeout(() => canvas.style.transform = "scale(1)", 100);
         food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
       } else {
         snake.pop();
@@ -91,7 +143,6 @@
       }
     });
 
-    let frame = 0;
     requestAnimationFrame(gameLoop);
   </script>
 </body>
